--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "sr-scrambler",
-  "version": "1.0.1",
-  "description": "utilitiy to generate scrambles for twisty puzzles",
+  "version": "2.0.0",
+  "description": "utilitiy to generate scrambles for twisty puzzles (rubiks cube, megaminx, pyraminx, skewb, square1)",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production --config webpack.config.js --env.dist=true",
-    "dev": "webpack --progress --colors --watch --mode development --config webpack.config.js --env.dist=false"
+    "build": "webpack --mode production --config webpack.config.js",
+    "dev": "webpack --progress --watch --mode development --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -27,9 +27,9 @@
   },
   "homepage": "https://github.com/tdecker91/srScrambler#readme",
   "devDependencies": {
-    "ts-loader": "^5.3.2",
-    "typescript": "^3.2.2",
-    "webpack": "^4.28.2",
-    "webpack-cli": "^3.1.2"
+    "ts-loader": "^9.2.7",
+    "typescript": "^4.6.2",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   }
 }
