--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "sr-scrambler",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "utilitiy to generate scrambles for twisty puzzles (rubiks cube, megaminx, pyraminx, skewb, square1)",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production --config webpack.config.js",
