--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,21 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "module": "es6",
-    "target": "es5",
+    "target": "es6",
     "allowJs": true,
-  }
+    "moduleResolution": "node",
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "declaration": true,
+    "declarationMap": true
+  },
+  "include": [
+    "./src"
+  ],
+  "exclude": [
+    "./tests",
+    "./node_modules"
+  ]
 }
